**0.4.0.4**

- If **both property Let and Set** are present then choose the Set (new option to alter this to Let)
- Fixed parsing bug with space before brackets on a call: *A = Something ()*
- Fixed parsing bug with empty brackets on LHS of assignment: *A () = SomeFnReturningArray()*
- Fixed issue with **"submit file"** button not being displayed when parsing failed

**0.4.0.3**

- Added button to copy Python **code to clipboard**
- Fixed issue which could crash the server when checking the latest update time

**0.4.0.2**

- Added server **status display** for online conversion
- Added ability to download both the **code and the runtime** files as a zip

**0.4**

- Converter now runs on **Python 3** and creates Python 3 compatible code