@@ -113,6 +113,10 @@ NotAllowed = VBParser
 #@-node:Logger
 #@+node:CustomIncludes
 
+[Directives]
+# Number, which path to choose for directives (#If #Else etc)
+Path = 1
+
 [CustomIncludes]
 # This is where you put modules that need to be included - all these
 # modules should be placed in the custom folder. 
